--- a/css/styles.css
+++ b/css/styles.css
@@ -460,3 +460,64 @@ body {
     border-radius: 50%;
 }
 
+/*TASK 5*/
+
+.site-navigation a::after {
+    content: "";
+   display: block;
+   position: absolute;
+   top: 0;
+   bottom: 0;
+   left: 0;
+   right: 0;
+   transform: translateY(45px);
+   height: 4px;
+   border-radius: 2px;
+   background-color: var(--text-blue);
+}
+
+
+
+
+
+
+
+
+
+/*OVERLAY*/
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.2);
+    height: 100%;
+    width: 100%;
+}
+
+.modal {
+    position: absolute;
+    top: 221px;
+    left: 536px;
+    width: 528px;
+    height: 581px;
+    background: #FFFFFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+.close-btn {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    width: 30px;
+    height: 30px;
+    background-color: var(--white-bg);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50px;
+    cursor: pointer;
+}
+
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
