--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@
     --box-shadow-port: rgba(0, 0, 0, 0.1);
     --box-shadow-port2: rgba(0, 0, 0, 0.08);
     --box-shadow-port3: rgba(0, 0, 0, 0.12);
+    --item-grid-bg: rgba(47, 48, 58, 0.8);
 }
 * {
     box-sizing: border-box;
@@ -462,22 +463,63 @@ body {
 
 /*TASK 5*/
 
-.site-navigation a::after {
-    content: "";
+.underline {
+    position: relative;
+}
+
+.underline::after {
+   content: "";
    display: block;
    position: absolute;
-   top: 0;
-   bottom: 0;
-   left: 0;
-   right: 0;
-   transform: translateY(45px);
+   bottom: -34px;
+   width: 100%;
    height: 4px;
    border-radius: 2px;
    background-color: var(--text-blue);
 }
+.grid-position {
+    position: relative;
+
+}
+.grid-position img {
+    vertical-align: bottom;
+}
+.grid-position-text {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 27px 0px;
+    background-color: var(--item-grid-bg);
+    color: var(--text-white);
+    font-size: 14px;
+    line-height: 1.14;
+}
+
+.card-move {
+    position: relative;
+    overflow: hidden;
+}
+
+.text-card-move {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translateY(100%);
+    padding: 49px 45px 49px 24px;
+    font-size: 18px;
+    line-height: 1.56;
+    color: var(--text-white);
+    background-color: rgba(33, 150, 243, 0.9);
+    transition: transform 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.set-card li:hover .text-card-move{
+    transform: translateY(0);
 
 
-
+}
 
 
 
@@ -492,12 +534,13 @@ body {
     background-color: rgba(0, 0, 0, 0.2);
     height: 100%;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .modal {
-    position: absolute;
-    top: 221px;
-    left: 536px;
+    position: relative;
     width: 528px;
     height: 581px;
     background: #FFFFFF;
@@ -514,6 +557,9 @@ body {
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50px;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .is-hidden {
