--- a/css/styles.css
+++ b/css/styles.css
@@ -140,9 +140,6 @@ body {
     width: fit-content;
     padding: 10px 40px;
     margin-bottom: 106px;
-    transition-property: background-color, color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);   
 }
 .usp-blocks {
     list-style: none;
@@ -441,13 +438,16 @@ body {
 }
 .client-icon {
     fill: var(--icon-team);
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-icon-wrapper li {
     border: 1px solid var(--icon-team);
     border-radius: 4px;
     padding: 16px 32px;
     cursor: pointer;
-    transition-property: fill, border;
+    transition-property: border;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -568,6 +568,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    opacity: 1;
+    visibility: visible;
+    opacity: 1;
+    transition: visibility 450ms cubic-bezier(0.4, 0, 0.2, 1), opacity 450ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
@@ -597,8 +601,7 @@ body {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
-    transform: scale(1);
-    transition-property: transform, border-radius;
-    transition-duration: 0.4s;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);   
+    transition-property: opacity, visibility;
+    transition-duration: 0.25s;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
